force-app/main/default/objects/Component_Settings__c/Component_Settings__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>ECM Component Settings</label>
    <nameField>
        <displayFormat>CompSettings-{0000}</displayFormat>
        <label>ECM Component Settings #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM Component Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>