force-app/main/default/objects/Component_Settings__c/fields/Add_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Add_Button_Label__c</fullName>
    <defaultValue>&quot;Add&quot;</defaultValue>
    <description>Button label for Add buttons</description>
    <label>Add Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>