force-app/main/default/objects/Component_Settings__c/fields/Case_Record_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Field_Name__c</fullName>
    <inlineHelpText>The column (if any) on the sObject that points to the parent Case Record</inlineHelpText>
    <label>Case Record Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>