force-app/main/default/objects/Component_Settings__c/fields/Client_Household_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Household_Field_Name__c</fullName>
    <inlineHelpText>The column (if any) on the sObject that points to the parent Client Household</inlineHelpText>
    <label>Client Household Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>