force-app/main/default/objects/Component_Settings__c/fields/Component_Classname__c.field-meta.xml
<CustomField>
    <fullName>Component_Classname__c</fullName>
    <formula>&apos;Component.C.&apos;+ RecordType.DeveloperName</formula>
    <label>Component Classname</label>
    <type>Text</type>
</CustomField>