force-app/main/default/objects/Component_Settings__c/fields/Contact_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field_Name__c</fullName>
    <inlineHelpText>The column (if any) on the sObject that points to the parent Contact</inlineHelpText>
    <label>Contact Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>