force-app/main/default/objects/Component_Settings__c/fields/ECM_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ECM_Configuration__c</fullName>
    <label>ECM Configuration</label>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipName>Component_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>