force-app/main/default/objects/Component_Settings__c/fields/ECM_Page_Component_Entry__c.field-meta.xml
<CustomField>
    <fullName>ECM_Page_Component_Entry__c</fullName>
    <description>The Visualforce markup required in the ECM Intake page in order to render the component.</description>
    <formula>&quot;&lt;c:&quot; + RIGHT(Component_Classname__c, LEN( Component_Classname__c ) - LEN(&apos;Component.C.&apos;)) + &quot; theParentController=\&quot;&quot; + &quot;{&quot; + &quot;!this&quot; + &quot;}&quot; + &quot;\&quot; csName=\&quot;&quot; + Name + &quot;\&quot;/&gt;&quot;</formula>
    <inlineHelpText>This sample Visualforce is meant only as helper sample code for setting up the ECM configuration.</inlineHelpText>
    <label>ECM Page Component Entry</label>
    <type>Text</type>
</CustomField>