force-app/main/default/objects/Component_Settings__c/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <label>Field Set Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>