force-app/main/default/objects/Component_Settings__c/fields/Field_Set_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Required__c</fullName>
    <formula>IF((Record_Type_Developer_Name__c == &apos;ExpCaseRecord&apos; || 
Record_Type_Developer_Name__c == &apos;ExpChildObject&apos; || 
Record_Type_Developer_Name__c == &apos;ExpChildObjectList&apos; || 
Record_Type_Developer_Name__c == &apos;ExpClientHousehold&apos; || 
Record_Type_Developer_Name__c == &apos;ExpClientUOS&apos; || 
Record_Type_Developer_Name__c == &apos;ExpContact&apos; || 
Record_Type_Developer_Name__c == &apos;ExpMasterDirectService&apos; || 
Record_Type_Developer_Name__c == &apos;ExpClientSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpRelationship&apos; ||
Record_Type_Developer_Name__c == &apos;ExpTreatmentPlan&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoal&apos; ||
Record_Type_Developer_Name__c == &apos;ExpPlannedService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassSession&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Field_Set_Required</label>
    <type>Text</type>
</CustomField>