force-app/main/default/objects/Component_Settings__c/fields/Goal_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Field_Name__c</fullName>
    <label>Goal Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>