force-app/main/default/objects/Component_Settings__c/fields/Group_Class_Session_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Session_Field_Name__c</fullName>
    <inlineHelpText>The column (if any) on the sObject that points to the parent Group Class Session</inlineHelpText>
    <label>Group Class Session Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>