force-app/main/default/objects/Component_Settings__c/fields/Is_Goal_Component__c.field-meta.xml
<CustomField>
    <fullName>Is_Goal_Component__c</fullName>
    <formula>Record_Type_Developer_Name__c == &apos;ExpGoal&apos; ||
Record_Type_Developer_Name__c == &apos;ExpPlannedService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoalIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos;</formula>
    <label>Is Goal Component</label>
    <type>Checkbox</type>
</CustomField>