force-app/main/default/objects/Component_Settings__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>This field is only provided as a convenience to the ECM Configuration author. It is currently not used by Visualforce in rendering the component.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>