force-app/main/default/objects/Component_Settings__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <inlineHelpText>The Record Type Label (not the API name). Leave blank for default record type.</inlineHelpText>
    <label>sObject Record Type Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>