force-app/main/default/objects/Component_Settings__c/fields/Relates_to_Objects__c.field-meta.xml
<CustomField>
    <fullName>Relates_to_Objects__c</fullName>
    <inlineHelpText>Select one or more parent objects. Contact = Client.</inlineHelpText>
    <label>Relates to Object(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case_Record__c</fullName>
            </value>
            <value>
                <fullName>Client_Household__c</fullName>
            </value>
            <value>
                <fullName>Client_Session__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Group_Class__c</fullName>
            </value>
            <value>
                <fullName>Group_Class_Session__c</fullName>
            </value>
            <value>
                <fullName>Treatment_Plan__c</fullName>
            </value>
            <value>
                <fullName>Goal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>