force-app/main/default/objects/Component_Settings__c/fields/Section_Collapsible__c.field-meta.xml
<CustomField>
    <fullName>Section_Collapsible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the section on the page can be collapsed or not</inlineHelpText>
    <label>Section Collapsible</label>
    <type>Checkbox</type>
</CustomField>