force-app/main/default/objects/Component_Settings__c/fields/Section_Columns__c.field-meta.xml
<CustomField>
    <fullName>Section_Columns__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>The number of columns to display in the section</inlineHelpText>
    <label>Section Columns</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>