force-app/main/default/objects/Component_Settings__c/fields/Section_Title__c.field-meta.xml
<CustomField>
    <fullName>Section_Title__c</fullName>
    <inlineHelpText>Title of the section in the page.</inlineHelpText>
    <label>Section Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>