force-app/main/default/objects/Component_Settings__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For service entry related components, the related service.</inlineHelpText>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>ECM Component Settings using this Service</relationshipLabel>
    <relationshipName>Component_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>