force-app/main/default/objects/Component_Settings__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <inlineHelpText>The Salesforce object, standard or custom, that this component primarily relates to</inlineHelpText>
    <label>sObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>