force-app/main/default/objects/Component_Settings__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <inlineHelpText>Optional parameter to specify a style=&quot;&quot; attribute for the Goal component.</inlineHelpText>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>