force-app/main/default/objects/Component_Settings__c/fields/Supports_PDF_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Supports_PDF_Rendering__c</fullName>
    <formula>IF( Record_Type_Developer_Name__c == &apos;ExpCaseRecord&apos; ||
Record_Type_Developer_Name__c == &apos;ExpContact&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientHousehold&apos; ||
Record_Type_Developer_Name__c == &apos;ExpHouseholdMembers&apos; ||
Record_Type_Developer_Name__c == &apos;ExpMasterDirectService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpStaffUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpProgressNote&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectList&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObject&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupStaffUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupNonEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpRelationship&apos; ||
Record_Type_Developer_Name__c == &apos;ExpServiceSelection&apos;
, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Supports PDF Rendering</label>
    <type>Text</type>
</CustomField>