force-app/main/default/objects/Component_Settings__c/fields/Treatment_Plan_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan_Field_Name__c</fullName>
    <inlineHelpText>The column (if any) on the sObject that points to the parent Treatment Plan</inlineHelpText>
    <label>Treatment Plan Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>