force-app/main/default/objects/Component_Settings__c/recordTypes/ExpCaseParticipantUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpCaseParticipantUOS</fullName>
    <active>true</active>
    <label>Case Participant UOS</label>
</RecordType>