force-app/main/default/objects/Component_Settings__c/recordTypes/ExpCaseRecord.recordType-meta.xml
<RecordType>
    <fullName>ExpCaseRecord</fullName>
    <active>true</active>
    <label>Case Record</label>
</RecordType>