force-app/main/default/objects/Component_Settings__c/recordTypes/ExpChildObject.recordType-meta.xml
<RecordType>
    <fullName>ExpChildObject</fullName>
    <active>true</active>
    <label>Child Object</label>
</RecordType>