force-app/main/default/objects/Component_Settings__c/recordTypes/ExpChildObjectList.recordType-meta.xml
<RecordType>
    <fullName>ExpChildObjectList</fullName>
    <active>true</active>
    <label>Child Object List</label>
</RecordType>