force-app/main/default/objects/Component_Settings__c/recordTypes/ExpChildObjectWithParentSObjectList.recordType-meta.xml
<RecordType>
    <fullName>ExpChildObjectWithParentSObjectList</fullName>
    <active>true</active>
    <label>Child Object With Parent sObject List</label>
</RecordType>