force-app/main/default/objects/Component_Settings__c/recordTypes/ExpClientHousehold.recordType-meta.xml
<RecordType>
    <fullName>ExpClientHousehold</fullName>
    <active>true</active>
    <label>Client Household</label>
</RecordType>