force-app/main/default/objects/Component_Settings__c/recordTypes/ExpClientSession.recordType-meta.xml
<RecordType>
    <fullName>ExpClientSession</fullName>
    <active>true</active>
    <label>Client Session</label>
</RecordType>