force-app/main/default/objects/Component_Settings__c/recordTypes/ExpClientUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpClientUOS</fullName>
    <active>true</active>
    <label>Client UOS</label>
</RecordType>