force-app/main/default/objects/Component_Settings__c/recordTypes/ExpContact.recordType-meta.xml
<RecordType>
    <fullName>ExpContact</fullName>
    <active>true</active>
    <label>Contact</label>
</RecordType>