force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGoal.recordType-meta.xml
<RecordType>
    <fullName>ExpGoal</fullName>
    <active>true</active>
    <label>Goal</label>
</RecordType>