force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGoalIndicator.recordType-meta.xml
<RecordType>
    <fullName>ExpGoalIndicator</fullName>
    <active>true</active>
    <label>Goal Indicator</label>
</RecordType>