force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupCaseParticipantUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupCaseParticipantUOS</fullName>
    <active>true</active>
    <label>Group Case Participant UOS</label>
</RecordType>