force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupClassAssignment.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupClassAssignment</fullName>
    <active>true</active>
    <label>Group Class Assignment</label>
</RecordType>