force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupClassSession.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupClassSession</fullName>
    <active>true</active>
    <label>Group Class Session</label>
</RecordType>