force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupEnrolledClientUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupEnrolledClientUOS</fullName>
    <active>true</active>
    <label>Group Enrolled Client UOS</label>
</RecordType>