force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupNonEnrolledClientUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupNonEnrolledClientUOS</fullName>
    <active>true</active>
    <label>Group Non Enrolled Client UOS</label>
</RecordType>