force-app/main/default/objects/Component_Settings__c/recordTypes/ExpGroupStaffUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpGroupStaffUOS</fullName>
    <active>true</active>
    <label>Group Staff UOS</label>
</RecordType>