force-app/main/default/objects/Component_Settings__c/recordTypes/ExpHouseholdMembers.recordType-meta.xml
<RecordType>
    <fullName>ExpHouseholdMembers</fullName>
    <active>true</active>
    <label>Household Members</label>
</RecordType>