force-app/main/default/objects/Component_Settings__c/recordTypes/ExpMasterDirectService.recordType-meta.xml
<RecordType>
    <fullName>ExpMasterDirectService</fullName>
    <active>true</active>
    <label>Master Direct Service</label>
</RecordType>