force-app/main/default/objects/Component_Settings__c/recordTypes/ExpPlannedService.recordType-meta.xml
<RecordType>
    <fullName>ExpPlannedService</fullName>
    <active>true</active>
    <label>Planned Service</label>
</RecordType>