force-app/main/default/objects/Component_Settings__c/recordTypes/ExpProgramList.recordType-meta.xml
<RecordType>
    <fullName>ExpProgramList</fullName>
    <active>true</active>
    <label>Program List</label>
</RecordType>