force-app/main/default/objects/Component_Settings__c/recordTypes/ExpProgressNote.recordType-meta.xml
<RecordType>
    <fullName>ExpProgressNote</fullName>
    <active>true</active>
    <label>Progress Note</label>
</RecordType>