force-app/main/default/objects/Component_Settings__c/recordTypes/ExpRelationship.recordType-meta.xml
<RecordType>
    <fullName>ExpRelationship</fullName>
    <active>true</active>
    <label>Relationship</label>
</RecordType>