force-app/main/default/objects/Component_Settings__c/recordTypes/ExpScheduling.recordType-meta.xml
<RecordType>
    <fullName>ExpScheduling</fullName>
    <active>true</active>
    <label>Scheduling</label>
</RecordType>