force-app/main/default/objects/Component_Settings__c/recordTypes/ExpServiceList.recordType-meta.xml
<RecordType>
    <fullName>ExpServiceList</fullName>
    <active>true</active>
    <label>Service List</label>
</RecordType>