force-app/main/default/objects/Component_Settings__c/recordTypes/ExpServicePlanIndicator.recordType-meta.xml
<RecordType>
    <fullName>ExpServicePlanIndicator</fullName>
    <active>true</active>
    <label>Service Plan Indicator</label>
</RecordType>