force-app/main/default/objects/Component_Settings__c/recordTypes/ExpServiceSelection.recordType-meta.xml
<RecordType>
    <fullName>ExpServiceSelection</fullName>
    <active>true</active>
    <label>Service Selection</label>
</RecordType>