force-app/main/default/objects/Component_Settings__c/recordTypes/ExpStaffUOS.recordType-meta.xml
<RecordType>
    <fullName>ExpStaffUOS</fullName>
    <active>true</active>
    <label>Staff UOS</label>
</RecordType>