force-app/main/default/objects/Component_Settings__c/recordTypes/ExpTreatmentPlan.recordType-meta.xml
<RecordType>
    <fullName>ExpTreatmentPlan</fullName>
    <active>true</active>
    <label>Treatment Plan</label>
</RecordType>