force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Child_Object_Relates_To_SE.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Child_Object_Relates_To_SE</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Service_Entry&apos; &amp;&amp;
(Record_Type_Developer_Name__c == &apos;ExpChildObject&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectList&apos;) &amp;&amp;
(INCLUDES(Relates_to_Objects__c, &apos;Group_Class_Session__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Group_Class__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Client_Household__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Treatment_Plan__c&apos;) || INCLUDES(Relates_to_Objects__c, &apos;Goal__c&apos;)
), true, false)</errorConditionFormula>
    <errorDisplayField>Relates_to_Objects__c</errorDisplayField>
    <errorMessage>Invalid values for Service Entry. The selected &apos;Relates To&apos; values are not available in a Service Entry configuration.</errorMessage>
</ValidationRule>