force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Child_Object_Relates_To_SP.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Child_Object_Relates_To_SP</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Service_Plan&apos; &amp;&amp;
(Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos;) &amp;&amp;
(INCLUDES(Relates_to_Objects__c, &apos;Group_Class_Session__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Group_Class__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Client_Household__c&apos;)||
INCLUDES(Relates_to_Objects__c, &apos;Client_Session__c&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Contact&apos;) ||
INCLUDES(Relates_to_Objects__c, &apos;Case_Record__c&apos;)
), true, false)</errorConditionFormula>
    <errorDisplayField>Relates_to_Objects__c</errorDisplayField>
    <errorMessage>Invalid values for Service Plan. The selected &apos;Relates To&apos; values are not available in a Service Plan configuration.</errorMessage>
</ValidationRule>