force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Field_Set_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Field_Set_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Field_Set_Required__c == &apos;Yes&apos; &amp;&amp; Field_Set_Name__c == null, true, false)</errorConditionFormula>
    <errorMessage>This type of component always requires a field set name.</errorMessage>
</ValidationRule>