force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Invalid_Component_Type_For_Group_SE.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Invalid_Component_Type_For_Group_SE</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Group_Service_Entry&apos; &amp;&amp; (Record_Type_Developer_Name__c == &apos;ExpCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpStaffUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpCaseRecord&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassAssignment&apos; ||
Record_Type_Developer_Name__c == &apos;ExpContact&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpRelationship&apos; ||
Record_Type_Developer_Name__c == &apos;ExpTreatmentPlan&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoal&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoalIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpPlannedService&apos; || 
Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos; ||
Record_Type_Developer_Name__c == &apos;ExpServicePlanIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpHouseholdMembers&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientHousehold&apos;
), true, false)</errorConditionFormula>
    <errorMessage>This component type is not valid for a Group Service Entry Configuration.</errorMessage>
</ValidationRule>