force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Invalid_Component_Type_For_Intake.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Invalid_Component_Type_For_Intake</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Intake&apos; &amp;&amp; (Record_Type_Developer_Name__c == &apos;ExpCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupNonEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupStaffUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpMasterDirectService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpProgressNote&apos; ||
Record_Type_Developer_Name__c == &apos;ExpScheduling&apos; ||
Record_Type_Developer_Name__c == &apos;ExpTreatmentPlan&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoal&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoalIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpPlannedService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos; ||
Record_Type_Developer_Name__c == &apos;ExpServicePlanIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpStaffUOS&apos;), true, false)</errorConditionFormula>
    <errorMessage>This component type is not valid for an Intake Configuration.</errorMessage>
</ValidationRule>