force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Invalid_Component_Type_For_SE.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Invalid_Component_Type_For_SE</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Service_Entry&apos; &amp;&amp; (Record_Type_Developer_Name__c == &apos;ExpGroupCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupNonEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpContact&apos; ||
Record_Type_Developer_Name__c == &apos;ExpRelationship&apos; ||
Record_Type_Developer_Name__c == &apos;ExpTreatmentPlan&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoal&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGoalIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpPlannedService&apos; ||
Record_Type_Developer_Name__c == &apos;ExpChildObjectWithParentSObjectList&apos; ||
Record_Type_Developer_Name__c == &apos;ExpServicePlanIndicator&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientHousehold&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupStaffUOS&apos;), true, false)</errorConditionFormula>
    <errorMessage>This component type is not valid for a Service Entry Configuration.</errorMessage>
</ValidationRule>