force-app/main/default/objects/Component_Settings__c/validationRules/Exp_Invalid_Component_Type_For_SP.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Invalid_Component_Type_For_SP</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c == &apos;Service_Plan&apos; &amp;&amp; (Record_Type_Developer_Name__c == &apos;ExpGroupCaseParticipantUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupClassSession&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupNonEnrolledClientUOS&apos; ||
Record_Type_Developer_Name__c == &apos;ExpContact&apos; ||
Record_Type_Developer_Name__c == &apos;ExpRelationship&apos; ||
Record_Type_Developer_Name__c == &apos;ExpClientHousehold&apos; ||
Record_Type_Developer_Name__c == &apos;ExpGroupStaffUOS&apos;), true, false)</errorConditionFormula>
    <errorMessage>This component type is not valid for a Service Plan Configuration.</errorMessage>
</ValidationRule>