force-app/main/default/objects/Component_Settings__c/validationRules/Exp_No_ClientUOS_For_MultiSelect.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_No_ClientUOS_For_MultiSelect</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.Record_Type_Developer_Name__c  == &apos;Service_Entry&apos; &amp;&amp; 
 TEXT(ECM_Configuration__r.Service_Selection__c) = &apos;Multiple&apos; &amp;&amp;
 Record_Type_Developer_Name__c  == &apos;ExpClientUOS&apos;, true, false)</errorConditionFormula>
    <errorMessage>Client UOS components are not allowed for configurations where multiple service selection is chosen.</errorMessage>
</ValidationRule>