force-app/main/default/objects/Component_Settings__c/validationRules/Exp_PDF_Field_Set_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_PDF_Field_Set_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ECM_Configuration__r.PDF_Rendering__c &amp;&amp;  
Field_Set_Name__c == null &amp;&amp;  
Record_Type_Developer_Name__c != &apos;ExpGroupClassAssignment&apos; &amp;&amp;
Record_Type_Developer_Name__c != &apos;ExpProgramList&apos; &amp;&amp;
Record_Type_Developer_Name__c != &apos;ExpServiceList&apos; &amp;&amp;
Record_Type_Developer_Name__c != &apos;ExpServiceSelection&apos;,
true, false)</errorConditionFormula>
    <errorDisplayField>Field_Set_Name__c</errorDisplayField>
    <errorMessage>A field set name is required because the parent configuration supports PDF rendering.</errorMessage>
</ValidationRule>