force-app/main/default/objects/Component_Settings__c/validationRules/Exp_PDF_Page_Number_Is_Always_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_PDF_Page_Number_Is_Always_1</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ECM_Configuration__r.PDF_Rendering__c &amp;&amp;  TEXT(Page_Number__c) &lt;&gt; &apos;1&apos;, true, false)</errorConditionFormula>
    <errorDisplayField>Page_Number__c</errorDisplayField>
    <errorMessage>PDF rendering requires page number to always be 1.</errorMessage>
</ValidationRule>